fix(image): hidden images were still visible when used in image groups

--- a/src/definitions/elements/image.less
+++ b/src/definitions/elements/image.less
@@ -48,7 +48,7 @@ img.ui.image {
 *******************************/
 
 .ui.hidden.images,
-.ui.hidden.image {
+.ui.ui.hidden.image {
   display: none;
 }
 .ui.hidden.transition.images,
